# NYU-Capstone

./: .gitignore  OUTPUT21.txt  OUTPUT22.txt  README.md  data_parser_backup.py  deploy.sh  hij_parser.py  requirements.txt  run.sh  setup.py
External_hij/: CMakeLists.txt  Makefile  cmake_install.cmake  external_hij  main.cpp  run.txt  test.py
External_hij/data/: H(1,9)_.txt  H(2,1)_.txt  H(2,3)_.txt  H(2,5)_.txt  H(2,7)_.txt  H(3,1)_.txt  H(3,2)_.txt  H(3,5)_.txt  H(3,6)_.txt  H(3,7)_.txt  H(3,8)_.txt  H(4,2)_.txt  H(4,4)_.txt  H(4,5)_.txt  H(4,6)_.txt  H(4,7)_.txt  H(4,8)_.txt  H(4,9)_.txt  H(5,1)_.txt  H(5,2)_.txt  H(5,5)_.txt  H(5,8)_.txt  H(5,9)_.txt  H(6,1)_.txt  H(6,3)_.txt  H(6,8)_.txt  H(6,9)_.txt  H(7,1)_.txt  H(7,2)_.txt  H(7,3)_.txt  H(7,8)_.txt  H(7,9)_.txt  H(8,1)_.txt  H(8,2)_.txt  H(8,3)_.txt  H(8,5)_.txt  H(8,6)_.txt  H(8,7)_.txt  H(8,9)_.txt  H(9,2)_.txt  (+29 more)
External_hij/input_data/: hij_input.txt
External_hij/source_MATH1/: AssociatedLegendreFunction.cpp  AssociatedLegendreFunction.h  BesselSpherical.h  Math1.cpp  Math1.h  Matrice.h  ScalarTranslationalMatrix.cpp  ScalarTranslationalMatrix.h  TableauX.cpp  VectorialTranslationalMatrix.cpp  VectorialTranslationalMatrix.h
Validation-Code/: AssociatedLegendreValidation.py  BesselSphericals2-WrongValueValidation_zj.cc  E_AllBesselSpherical2.py  SphericalTMatrix.py
Validation_Code/: E_AllBesselSpherical1.py  OAEC.py  RCTMA.py  RCTMA_mp.py  SphericalTMatrix.py  build_external_hij.py  data_parser.py  parameter_parser.py  test.py
Validation_Data/: H.npy  InputDataC1.npy  InputDataC1.txt  InputDataC2.txt  (+6 more)
(+186 files in other folders)
